--- a/data/1.0/Video_Stream.yaml
+++ b/data/1.0/Video_Stream.yaml
@@ -1,19 +1,69 @@
 Video Stream:
   description: |
-    Allows adding meta data to a single tag that is used by the *Operation Object*.  
-    It is not mandatory to have a Tag Object per tag used there.
+    All meta info to describe the video stream.
   fields:
     -
-      name: name
+      name: codecName
       type: string
-      description: The name of the tag.
+      description: Name of the codec
       required: true
     -
-      name: description
+      name: codecFullName
       type: string
-      description: A short description for the tag.
-      md: GFM
+      description: Fullname of the codec
+      required: true
     -
-      name: externalDocs
-      type: ExternalDocumentation
-      description: Additional external documentation for this tag.
+      name: width
+      type: integer
+      description: Width of the video stream
+      required: true
+    -
+      name: height
+      type: integer
+      description: Height of the video stream
+      required: true
+    -
+      name: profile
+      type: string
+      description: Profile of h264 codec
+    -
+      name: timeBase
+      type: string
+      description: Timebase for video stream
+    -
+      name: hasBFrames
+      type: int
+      description: Whether has b frames in the video stream
+    -
+      name: pixFmt
+      type: string
+      description: pixel format of the video stream
+    -
+      name: startPts
+      type: integer
+      description: start pts of the video stream
+    -
+      name: startTime
+      type: integer
+      description: start time of the video stream
+    -
+      name: duration
+      type: float
+      description: duration of the video stream
+    -
+      name: bitrate
+      type: integer
+      description: bitrate of the video stream
+    -
+      name: framesCount
+      type: integer
+      description: frames count of the video stream including I,P,B frames
+    - name: keyFrames
+      type: "[Key Frame]"
+      description: |
+        A list of key frames.  
+        The order of the streams can be used to reflect on their order. 
+    - name: h264Stream
+      type: "H264 Stream"
+      description: |
+        h264 stream parameters
